--- a/notebooks/stks/stk_tick_ana.ipynb
+++ b/notebooks/stks/stk_tick_ana.ipynb
@@ -6951,11 +6951,341 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "b69a577c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== PRICE AUTOCORRELATION AND MOMENTUM PATTERN ANALYSIS ===\n",
+      "Created 'price_change_pct' column\n",
+      "Analyzing price autocorrelation with lags 1 to 50...\n",
+      "Total data points: 10,956\n",
+      "\n",
+      "Calculating autocorrelation coefficients...\n",
+      "\n",
+      "=== AUTOCORRELATION RESULTS ===\n",
+      "Lags analyzed: 50\n",
+      "Lag range: 1 to 50\n",
+      "\n",
+      "--- AUTOCORRELATION STATISTICS ---\n",
+      "Price Change Autocorr:\n",
+      "  Mean: -0.0073\n",
+      "  Std: 0.0470\n",
+      "  Min: -0.3246\n",
+      "  Max: 0.0233\n",
+      "  Significant correlations (>0.1): 1\n",
+      "  Significant correlations (>0.2): 1\n",
+      "Price Level Autocorr:\n",
+      "  Mean: 0.9883\n",
+      "  Std: 0.0060\n",
+      "  Min: 0.9783\n",
+      "  Max: 0.9986\n",
+      "  Significant correlations (>0.1): 50\n",
+      "  Significant correlations (>0.2): 50\n",
+      "Price Pct Autocorr:\n",
+      "  Mean: -0.0072\n",
+      "  Std: 0.0508\n",
+      "  Min: -0.3532\n",
+      "  Max: 0.0180\n",
+      "  Significant correlations (>0.1): 1\n",
+      "  Significant correlations (>0.2): 1\n",
+      "\n",
+      "--- SIGNIFICANT AUTOCORRELATIONS (>0.1) ---\n",
+      "Found 1 significant autocorrelations:\n",
+      "Lag    Price Change    Price Level     Price %         Interpretation      \n",
+      "--------------------------------------------------------------------------------\n",
+      "1.0    -0.3246         0.9986          -0.3532         Short-term reversal \n",
+      "\n",
+      "=== MOMENTUM PATTERN ANALYSIS ===\n",
+      "--- SHORT-TERM MOMENTUM (Lags 1-5) ---\n",
+      "Average autocorrelation: -0.0687\n",
+      "  Pattern: Negative momentum (prices tend to reverse)\n",
+      "\n",
+      "--- MEDIUM-TERM MOMENTUM (Lags 6-15) ---\n",
+      "Average autocorrelation: 0.0012\n",
+      "  Pattern: No clear momentum (trendless)\n",
+      "\n",
+      "--- LONG-TERM MOMENTUM (Lags 16+) ---\n",
+      "Average autocorrelation: -0.0009\n",
+      "  Pattern: No clear momentum (random)\n",
+      "\n",
+      "--- OVERALL MOMENTUM ASSESSMENT ---\n",
+      "Overall momentum: -0.0073\n",
+      "Momentum strength: 0.0073\n",
+      "Momentum strength category: Very Weak\n",
+      "Market behavior: Random walk (efficient market)\n",
+      "\n",
+      "--- TRADING IMPLICATIONS ---\n",
+      "Short-term strategy: Range trading (no clear edge)\n",
+      "Medium-term strategy: Breakout trading\n",
+      "\n",
+      "--- STATISTICAL SIGNIFICANCE ---\n",
+      "Note: Autocorrelation coefficients above 0.1 are generally considered significant\n",
+      "Note: Coefficients above 0.2 indicate strong patterns\n",
+      "Note: Coefficients below 0.05 suggest random behavior\n",
+      "\n",
+      "=== EXPORT DATA ===\n",
+      "Autocorrelation data is available in:\n",
+      "- 'autocorr_df': DataFrame with all autocorrelation coefficients\n",
+      "- 'significant_lags': DataFrame with significant correlations only\n",
+      "\n",
+      "=== SAMPLE AUTOCORRELATION DATA (First 10 rows) ===\n",
+      "   lag  price_change_autocorr  price_level_autocorr  price_pct_autocorr\n",
+      "0    1                -0.3246                0.9986             -0.3532\n",
+      "1    2                -0.0339                0.9982              0.0033\n",
+      "2    3                 0.0007                0.9978             -0.0043\n",
+      "3    4                 0.0233                0.9974              0.0150\n",
+      "4    5                -0.0091                0.9969              0.0019\n",
+      "5    6                 0.0165                0.9965              0.0097\n",
+      "6    7                -0.0172                0.9960             -0.0200\n",
+      "7    8                -0.0135                0.9956              0.0016\n",
+      "8    9                -0.0015                0.9951             -0.0087\n",
+      "9   10                 0.0145                0.9947              0.0081\n",
+      "\n",
+      "=== KEY FINDINGS SUMMARY ===\n",
+      "1. Short-term momentum: No\n",
+      "2. Medium-term momentum: No\n",
+      "3. Long-term momentum: No\n",
+      "4. Overall pattern: Random\n",
+      "5. Trading edge: Weak\n",
+      "\n",
+      "=== ANALYSIS COMPLETE ===\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Price autocorrelation (lag analysis) to detect momentum patterns\n",
+    "print(\"=== PRICE AUTOCORRELATION AND MOMENTUM PATTERN ANALYSIS ===\")\n",
+    "\n",
+    "# Ensure data is sorted by datetime\n",
+    "df = df.sort_values('date').reset_index(drop=True)\n",
+    "\n",
+    "# Calculate price changes if not already present\n",
+    "if 'price_change' not in df.columns:\n",
+    "    df['price_change'] = df['price'].diff()\n",
+    "    print(\"Created 'price_change' column\")\n",
+    "\n",
+    "if 'price_change_pct' not in df.columns:\n",
+    "    df['price_change_pct'] = df['price'].pct_change() * 100\n",
+    "    print(\"Created 'price_change_pct' column\")\n",
+    "\n",
+    "# Set parameters for autocorrelation analysis\n",
+    "MAX_LAGS = 50  # Maximum number of lags to analyze\n",
+    "MIN_LAGS = 1   # Minimum number of lags\n",
+    "LAG_STEP = 1   # Step size between lags\n",
+    "\n",
+    "print(f\"Analyzing price autocorrelation with lags {MIN_LAGS} to {MAX_LAGS}...\")\n",
+    "print(f\"Total data points: {len(df):,}\")\n",
+    "\n",
+    "# Calculate autocorrelation for different lags\n",
+    "print(\"\\nCalculating autocorrelation coefficients...\")\n",
+    "autocorr_results = []\n",
+    "\n",
+    "for lag in range(MIN_LAGS, MAX_LAGS + 1, LAG_STEP):\n",
+    "    # Calculate autocorrelation for price changes\n",
+    "    if lag < len(df):\n",
+    "        # Price change autocorrelation\n",
+    "        price_changes = df['price_change'].dropna()\n",
+    "        if len(price_changes) > lag:\n",
+    "            autocorr_price = price_changes.autocorr(lag=lag)\n",
+    "        else:\n",
+    "            autocorr_price = np.nan\n",
+    "            \n",
+    "        # Price level autocorrelation\n",
+    "        prices = df['price'].dropna()\n",
+    "        if len(prices) > lag:\n",
+    "            autocorr_level = prices.autocorr(lag=lag)\n",
+    "        else:\n",
+    "            autocorr_level = np.nan\n",
+    "            \n",
+    "        # Percentage change autocorrelation\n",
+    "        price_pct_changes = df['price_change_pct'].dropna()\n",
+    "        if len(price_pct_changes) > lag:\n",
+    "            autocorr_pct = price_pct_changes.autocorr(lag=lag)\n",
+    "        else:\n",
+    "            autocorr_pct = np.nan\n",
+    "        \n",
+    "        autocorr_results.append({\n",
+    "            'lag': lag,\n",
+    "            'price_change_autocorr': autocorr_price,\n",
+    "            'price_level_autocorr': autocorr_level,\n",
+    "            'price_pct_autocorr': autocorr_pct\n",
+    "        })\n",
+    "\n",
+    "# Create autocorrelation DataFrame\n",
+    "autocorr_df = pd.DataFrame(autocorr_results)\n",
+    "\n",
+    "print(f\"\\n=== AUTOCORRELATION RESULTS ===\")\n",
+    "print(f\"Lags analyzed: {len(autocorr_df)}\")\n",
+    "print(f\"Lag range: {MIN_LAGS} to {MAX_LAGS}\")\n",
+    "\n",
+    "# Display autocorrelation statistics\n",
+    "print(f\"\\n--- AUTOCORRELATION STATISTICS ---\")\n",
+    "for col in ['price_change_autocorr', 'price_level_autocorr', 'price_pct_autocorr']:\n",
+    "    col_name = col.replace('_', ' ').title()\n",
+    "    valid_values = autocorr_df[col].dropna()\n",
+    "    \n",
+    "    if len(valid_values) > 0:\n",
+    "        print(f\"{col_name}:\")\n",
+    "        print(f\"  Mean: {valid_values.mean():.4f}\")\n",
+    "        print(f\"  Std: {valid_values.std():.4f}\")\n",
+    "        print(f\"  Min: {valid_values.min():.4f}\")\n",
+    "        print(f\"  Max: {valid_values.max():.4f}\")\n",
+    "        print(f\"  Significant correlations (>0.1): {(abs(valid_values) > 0.1).sum()}\")\n",
+    "        print(f\"  Significant correlations (>0.2): {(abs(valid_values) > 0.2).sum()}\")\n",
+    "\n",
+    "# Identify significant autocorrelations\n",
+    "print(f\"\\n--- SIGNIFICANT AUTOCORRELATIONS (>0.1) ---\")\n",
+    "significant_lags = autocorr_df[abs(autocorr_df['price_change_autocorr']) > 0.1].copy()\n",
+    "significant_lags = significant_lags.sort_values('price_change_autocorr', key=abs, ascending=False)\n",
+    "\n",
+    "if len(significant_lags) > 0:\n",
+    "    print(f\"Found {len(significant_lags)} significant autocorrelations:\")\n",
+    "    print(f\"{'Lag':<6} {'Price Change':<15} {'Price Level':<15} {'Price %':<15} {'Interpretation':<20}\")\n",
+    "    print(\"-\" * 80)\n",
+    "    \n",
+    "    for _, row in significant_lags.iterrows():\n",
+    "        lag = row['lag']\n",
+    "        price_change_corr = row['price_change_autocorr']\n",
+    "        price_level_corr = row['price_level_autocorr']\n",
+    "        price_pct_corr = row['price_pct_autocorr']\n",
+    "        \n",
+    "        # Interpret the autocorrelation\n",
+    "        if price_change_corr > 0.1:\n",
+    "            if lag <= 5:\n",
+    "                interpretation = \"Short-term momentum\"\n",
+    "            elif lag <= 15:\n",
+    "                interpretation = \"Medium-term momentum\"\n",
+    "            else:\n",
+    "                interpretation = \"Long-term momentum\"\n",
+    "        elif price_change_corr < -0.1:\n",
+    "            if lag <= 5:\n",
+    "                interpretation = \"Short-term reversal\"\n",
+    "            elif lag <= 15:\n",
+    "                interpretation = \"Medium-term reversal\"\n",
+    "            else:\n",
+    "                interpretation = \"Long-term reversal\"\n",
+    "        else:\n",
+    "            interpretation = \"Weak correlation\"\n",
+    "        \n",
+    "        print(f\"{lag:<6} {price_change_corr:<15.4f} {price_level_corr:<15.4f} {price_pct_corr:<15.4f} {interpretation:<20}\")\n",
+    "else:\n",
+    "    print(\"No significant autocorrelations found (>0.1 threshold)\")\n",
+    "\n",
+    "# Momentum pattern analysis\n",
+    "print(f\"\\n=== MOMENTUM PATTERN ANALYSIS ===\")\n",
+    "\n",
+    "# 1. Short-term momentum (lags 1-5)\n",
+    "short_term_lags = autocorr_df[autocorr_df['lag'].between(1, 5)]\n",
+    "short_term_momentum = short_term_lags['price_change_autocorr'].mean()\n",
+    "\n",
+    "print(f\"--- SHORT-TERM MOMENTUM (Lags 1-5) ---\")\n",
+    "print(f\"Average autocorrelation: {short_term_momentum:.4f}\")\n",
+    "if short_term_momentum > 0.05:\n",
+    "    print(\"  Pattern: Positive momentum (prices tend to continue in same direction)\")\n",
+    "elif short_term_momentum < -0.05:\n",
+    "    print(\"  Pattern: Negative momentum (prices tend to reverse)\")\n",
+    "else:\n",
+    "    print(\"  Pattern: No clear momentum (random walk behavior)\")\n",
+    "\n",
+    "# 2. Medium-term momentum (lags 6-15)\n",
+    "medium_term_lags = autocorr_df[autocorr_df['lag'].between(6, 15)]\n",
+    "medium_term_momentum = medium_term_lags['price_change_autocorr'].mean()\n",
+    "\n",
+    "print(f\"\\n--- MEDIUM-TERM MOMENTUM (Lags 6-15) ---\")\n",
+    "print(f\"Average autocorrelation: {medium_term_momentum:.4f}\")\n",
+    "if medium_term_momentum > 0.05:\n",
+    "    print(\"  Pattern: Positive momentum (trend continuation)\")\n",
+    "elif medium_term_momentum < -0.05:\n",
+    "    print(\"  Pattern: Negative momentum (trend reversal)\")\n",
+    "else:\n",
+    "    print(\"  Pattern: No clear momentum (trendless)\")\n",
+    "\n",
+    "# 3. Long-term momentum (lags 16+)\n",
+    "long_term_lags = autocorr_df[autocorr_df['lag'] >= 16]\n",
+    "long_term_momentum = long_term_lags['price_change_autocorr'].mean()\n",
+    "\n",
+    "print(f\"\\n--- LONG-TERM MOMENTUM (Lags 16+) ---\")\n",
+    "print(f\"Average autocorrelation: {long_term_momentum:.4f}\")\n",
+    "if long_term_momentum > 0.05:\n",
+    "    print(\"  Pattern: Positive momentum (strong trend)\")\n",
+    "elif long_term_momentum < -0.05:\n",
+    "    print(\"  Pattern: Negative momentum (mean reversion)\")\n",
+    "else:\n",
+    "    print(\"  Pattern: No clear momentum (random)\")\n",
+    "\n",
+    "# 4. Overall momentum assessment\n",
+    "print(f\"\\n--- OVERALL MOMENTUM ASSESSMENT ---\")\n",
+    "all_momentum = autocorr_df['price_change_autocorr'].mean()\n",
+    "momentum_strength = abs(all_momentum)\n",
+    "\n",
+    "print(f\"Overall momentum: {all_momentum:.4f}\")\n",
+    "print(f\"Momentum strength: {momentum_strength:.4f}\")\n",
+    "\n",
+    "if momentum_strength > 0.2:\n",
+    "    strength_desc = \"Strong\"\n",
+    "elif momentum_strength > 0.1:\n",
+    "    strength_desc = \"Moderate\"\n",
+    "elif momentum_strength > 0.05:\n",
+    "    strength_desc = \"Weak\"\n",
+    "else:\n",
+    "    strength_desc = \"Very Weak\"\n",
+    "\n",
+    "print(f\"Momentum strength category: {strength_desc}\")\n",
+    "\n",
+    "if all_momentum > 0.05:\n",
+    "    print(\"Market behavior: Momentum-driven (trending)\")\n",
+    "elif all_momentum < -0.05:\n",
+    "    print(\"Market behavior: Reversal-driven (mean-reverting)\")\n",
+    "else:\n",
+    "    print(\"Market behavior: Random walk (efficient market)\")\n",
+    "\n",
+    "# 5. Trading implications\n",
+    "print(f\"\\n--- TRADING IMPLICATIONS ---\")\n",
+    "if short_term_momentum > 0.1:\n",
+    "    print(\"Short-term strategy: Momentum trading (follow the trend)\")\n",
+    "elif short_term_momentum < -0.1:\n",
+    "    print(\"Short-term strategy: Contrarian trading (fade the move)\")\n",
+    "else:\n",
+    "    print(\"Short-term strategy: Range trading (no clear edge)\")\n",
+    "\n",
+    "if medium_term_momentum > 0.1:\n",
+    "    print(\"Medium-term strategy: Trend following\")\n",
+    "elif medium_term_momentum < -0.1:\n",
+    "    print(\"Medium-term strategy: Mean reversion\")\n",
+    "else:\n",
+    "    print(\"Medium-term strategy: Breakout trading\")\n",
+    "\n",
+    "# 6. Statistical significance testing\n",
+    "print(f\"\\n--- STATISTICAL SIGNIFICANCE ---\")\n",
+    "print(\"Note: Autocorrelation coefficients above 0.1 are generally considered significant\")\n",
+    "print(\"Note: Coefficients above 0.2 indicate strong patterns\")\n",
+    "print(\"Note: Coefficients below 0.05 suggest random behavior\")\n",
+    "\n",
+    "# Export data\n",
+    "print(f\"\\n=== EXPORT DATA ===\")\n",
+    "print(\"Autocorrelation data is available in:\")\n",
+    "print(\"- 'autocorr_df': DataFrame with all autocorrelation coefficients\")\n",
+    "print(\"- 'significant_lags': DataFrame with significant correlations only\")\n",
+    "\n",
+    "# Display sample of autocorrelation data\n",
+    "print(f\"\\n=== SAMPLE AUTOCORRELATION DATA (First 10 rows) ===\")\n",
+    "sample_autocorr = autocorr_df[['lag', 'price_change_autocorr', 'price_level_autocorr', 'price_pct_autocorr']].head(10)\n",
+    "print(sample_autocorr.round(4))\n",
+    "\n",
+    "# Create a summary of key findings\n",
+    "print(f\"\\n=== KEY FINDINGS SUMMARY ===\")\n",
+    "print(f\"1. Short-term momentum: {'Yes' if short_term_momentum > 0.05 else 'No'}\")\n",
+    "print(f\"2. Medium-term momentum: {'Yes' if medium_term_momentum > 0.05 else 'No'}\")\n",
+    "print(f\"3. Long-term momentum: {'Yes' if long_term_momentum > 0.05 else 'No'}\")\n",
+    "print(f\"4. Overall pattern: {'Momentum' if all_momentum > 0.05 else 'Reversal' if all_momentum < -0.05 else 'Random'}\")\n",
+    "print(f\"5. Trading edge: {'Strong' if momentum_strength > 0.2 else 'Moderate' if momentum_strength > 0.1 else 'Weak'}\")\n",
+    "\n",
+    "print(f\"\\n=== ANALYSIS COMPLETE ===\")"
+   ]
   },
   {
    "cell_type": "code",
